--- a/configs/data.ini
+++ b/configs/data.ini
@@ -1,5 +1,5 @@
-[DATA-UPDATE]
-tickers = EUR/USD, GBP/USD
-frequency = m5, H1
-first_date = '01/01/1990'
-last_date = '01/01/2030'
+[DATA]
+tickers = EUR/USD,GBP/USD
+frequency = H1
+first_date = 01/01/2000
+last_date = 01/01/2021
