--- a/configs/api.ini
+++ b/configs/api.ini
@@ -1,4 +1,8 @@
-[FXCM-API]
+[FXCM]
 log_level = error
-log_file = ../logs/api_log.log
-access_token = e678d104dd8731f0edb78f3a5b4d18538f1148fe
+log_file = logs/api_log.log
+access_token = c585af76cd1c6f43fb455004bed6323533097a82
+
+[FXCM-PLATFORM]
+login = D25830508
+pswd = 5Ywot
