Working version of data download

--- a/configs/data.ini
+++ b/configs/data.ini
@@ -1,5 +1,5 @@
 [DATA]
-tickers = EUR/USD,GBP/USD
-frequency = H1
-first_date = 01/01/2000
+tickers = EURUSD,GBPUSD
+frequency = H1,m5
+first_date = 01/01/2015
 last_date = 01/01/2021
