Tests added and new class for cash mgnt

--- a/configs/data.ini
+++ b/configs/data.ini
@@ -3,4 +3,4 @@ tickers = EURUSD,GBPUSD,USDJPY
 frequency = H1,m5
 first_date = 01/01/2015
 last_date = 01/01/2021
-processing = mid
+processing = bidask
