--- a/configs/api.ini
+++ b/configs/api.ini
@@ -1,6 +1,6 @@
 [FXCM]
 log_level = error
-log_file = logs/api_log.log
+log_file = logs/api.log
 access_token = c585af76cd1c6f43fb455004bed6323533097a82
 
 [FXCM-PLATFORM]
