--- a/configs/data.ini
+++ b/configs/data.ini
@@ -1,5 +1,5 @@
 [DATA]
-tickers = EURUSD,GBPUSD,USDJPY
+tickers = EURUSD,GBPUSD,USDJPY,USDCHF,AUDUSD,USDCAD
 frequency = H1,m5
 first_date = 01/01/2015
 last_date = 01/01/2021
