Logging expanded, garbage collection added

--- a/configs/settings.dev.ini
+++ b/configs/settings.dev.ini
@@ -2,6 +2,7 @@
 log_level = error
 log_file = logs/api.log
 access_token = c585af76cd1c6f43fb455004bed6323533097a82
+account = demo
 
 [FXCM-PLATFORM]
 login = D25830508
@@ -9,7 +10,7 @@ pswd = 5Ywot
 
 [DATA]
 tickers = EURUSD,GBPUSD,USDJPY,USDCHF,AUDUSD,USDCAD
-frequency = H1,m5
+frequency = H1,m5,m1
 first_date = 01/01/2015
 last_date = 01/01/2021
 processing = bidask
@@ -25,4 +26,3 @@ max_width = 12
 min_width = 4
 risk = 0.0150
 log_level = DEBUG
-account = demo
