--- a/configs/settings.prod.ini
+++ b/configs/settings.prod.ini
@@ -2,6 +2,7 @@
 log_level = error
 log_file = logs/api.log
 access_token = c585af76cd1c6f43fb455004bed6323533097a82
+account = demo
 
 [FXCM-PLATFORM]
 login = D25830508
@@ -24,5 +25,4 @@ sl_extension = 1
 max_width = 12
 min_width = 4
 risk = 0.0150
-log_level = INFO
-account = demo
+log_level = DEBUG
