--- a/configs/settings.dev.ini
+++ b/configs/settings.dev.ini
@@ -16,7 +16,7 @@ last_date = 01/01/2021
 processing = bidask
 
 [TRADER]
-currency = GBPUSD
+currency = EURUSD
 frequency = m1
 target_level = 4.0
 back_level = 2.1
@@ -24,5 +24,5 @@ break_level = 2
 sl_extension = 1
 max_width = 12
 min_width = 4
-risk = 0.015
+risk = 0.0100
 log_level = DEBUG
