--- a/configs/settings.prod.ini
+++ b/configs/settings.prod.ini
@@ -5,7 +5,7 @@ access_token = c585af76cd1c6f43fb455004bed6323533097a82
 account = demo
 
 [TRADER]
-currency = GBPUSD
+currency = EURUSD
 frequency = m1
 target_level = 4.0
 back_level = 2.1
@@ -13,5 +13,5 @@ break_level = 2
 sl_extension = 1
 max_width = 12
 min_width = 4
-risk = 0.0150
+risk = 0.0100
 log_level = INFO
