config changed to EURUSD

--- a/configs/settings.prod.ini
+++ b/configs/settings.prod.ini
@@ -5,7 +5,7 @@ access_token = c585af76cd1c6f43fb455004bed6323533097a82
 account = demo
 
 [TRADER]
-currency = EURUSD
+currency = GBPUSD
 frequency = m1
 target_level = 4.0
 back_level = 2.1
