--- a/configs/settings.dev.ini
+++ b/configs/settings.dev.ini
@@ -16,13 +16,13 @@ last_date = 01/01/2021
 processing = bidask
 
 [TRADER]
-currency = GBPUSD
+currency = EURUSD
 frequency = m1
 target_level = 4.0
 back_level = 2.1
 break_level = 2
 sl_extension = 1
 max_width = 12
-min_width = 3
+min_width = 2
 risk = 0.010
-log_level = DEBUG
+log_level = INFO
