--- a/configs/settings.dev.ini
+++ b/configs/settings.dev.ini
@@ -1,12 +1,12 @@
 [FXCM]
 log_level = error
 log_file = logs/api.log
-access_token = c585af76cd1c6f43fb455004bed6323533097a82
+access_token = cedb5abcc84264aa88d6551f81bb4fd485caff46
 account = demo
 
 [FXCM-PLATFORM]
-login = D25830508
-pswd = 5Ywot
+login = D25832205
+pswd = Ieny1
 
 [DATA]
 tickers = EURUSD,GBPUSD,USDJPY,USDCHF,AUDUSD,USDCAD
