New account added

--- a/configs/settings.prod.ini
+++ b/configs/settings.prod.ini
@@ -4,6 +4,10 @@ log_file = logs/api.log
 access_token = cedb5abcc84264aa88d6551f81bb4fd485caff46
 account = demo
 
+[FXCM-PLATFORM]
+login = D25832205
+pswd = Ieny1
+
 [TRADER]
 currency = EURUSD
 frequency = m1
