configuration class changed

--- a/configs/settings.prod.ini
+++ b/configs/settings.prod.ini
@@ -8,14 +8,9 @@ account = demo
 login = D25832205
 pswd = Ieny1
 
-[TRADER]
-currency = EURUSD
-frequency = m1
-target_level = 4.0
-back_level = 2.1
-break_level = 2
-sl_extension = 1
-max_width = 12
-min_width = 2
-risk = 0.010
-log_level = INFO
+[DATA]
+tickers = EURUSD,GBPUSD,USDJPY,USDCHF,AUDUSD,USDCAD
+frequency = H1,m5,m1
+first_date = 01/01/2015
+last_date = 01/01/2021
+processing = bidask
