Container deployment redefined

--- a/configs/settings.dev.ini
+++ b/configs/settings.dev.ini
@@ -9,8 +9,8 @@ login = D25832205
 pswd = Ieny1
 
 [DATA]
-tickers = EURUSD,GBPUSD,USDJPY,USDCHF,AUDUSD,USDCAD
-frequency = H1,m5,m1
-first_date = 01/01/2015
+tickers = EURUSD,GBPUSD,USDJPY,USDCHF,AUDUSD,USDCAD,AUDJPY,CHFJPY,CADCHF,EURCHF,EURCAD
+frequency = m1,m5
+first_date = 01/01/2018
 last_date = 01/01/2021
 processing = bidask
