--- a/scripts/containers/night-container.yaml
+++ b/scripts/containers/night-container.yaml
@@ -1,26 +1,13 @@
 apiVersion: 2019-12-01
 location: uksouth
-name: trader
+name: night-trader
 properties:
   containers:
-  - name: day-trader
-    properties:
-      environmentVariables:
-      - name: currency
-        value: EURUSD
-      - name: frequency
-        value: m1
-      image: fxcmtrader.azurecr.io/fxcmtrader/trader:1.2.0
-      ports: []
-      resources:
-        requests:
-          cpu: 2.0
-          memoryInGB: 2.0
   - name: night-trader
     properties:
       environmentVariables:
       - name: currency
-        value: AUDJPY
+        value: USDJPY
       - name: frequency
         value: m1
       image: fxcmtrader.azurecr.io/fxcmtrader/trader:1.2.0
