Midnight test added and configs

--- a/configs/settings.prod.ini
+++ b/configs/settings.prod.ini
@@ -8,6 +8,9 @@ account = demo
 login = D25832205
 pswd = Ieny1
 
+[DATABASE]
+connection_string = None
+
 [DATA]
 tickers = EURUSD,GBPUSD,USDJPY,USDCHF,AUDUSD,USDCAD
 frequency = H1,m5,m1
