--- a/configs/settings.dev.ini
+++ b/configs/settings.dev.ini
@@ -8,6 +8,9 @@ account = demo
 login = D25832205
 pswd = Ieny1
 
+[DATABASE]
+connection_string = None
+
 [DATA]
 tickers = EURUSD,GBPUSD,USDJPY,USDCHF,AUDUSD,USDCAD,AUDJPY,CHFJPY,CADCHF,EURCHF,EURCAD
 frequency = m1,m5
